Edits/updates to Vertical Gradients Models section

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -494,30 +494,28 @@ Leaf-scale properties and processes aggregate non-linearly  in vertical and hori
 
 Still, partitioning ET into its constituent components, let alone vertically partitioning transpiration rates in the canopy, remains a challenge. Eddy covariance techniques, sap flow measurements, and stable isotope analysis offer useful tools, although errors can be large (Williams et al 2004, Herbst et al. 1996). To date, empirical analyses of ET vertical partitioning and interactions with temperature and vegetation structure have be concentrated in midlatitude ecosystems (e.g. Haverd et al 2009, 2011, Staudt et al. 2011, Ringgaard et al. 2014). With respect to changing temperatures, the net effect of leaf- and plant-level thermal responses remains an active area of research, including both how vertical variation in thermal sensitivity influences forest ecosystem dynamics and biosphere-atmosphere interactions. 
 
+[Elsa: do we want a section about research opportunities using remote sensing or is that outside the scope of this review?] 
 An increasing availability of airborne and spaceborne LiDAR remote sensing data offers a promising opportunity for mapping vertical thermal gradients and vegetation structure. [Drone based FLIR cams, tower thermal cams (Pau et al 2018), ECOSTRESS]. To evaluate large-scale ecosystem patterns, high resolution vertically resolved vegetation structure from LiDAR data can be analyzed in combination with collocated field measurements collected using towers (FluxNet REF), canopy cranes (@nakamuraForestsTheirCanopies2017), or by tree climbing (REF – e.g. Asner papers, Shenkin et al – Unding Jami’s work). Existing research efforts have already revealed incredibly heterogeneity in vegetation structure, diversity, traits, and properties both within and across ecosystems (REFS – Stovall, Schneider, …others). 
 
 *Representing Vertical Gradients in Models* 
+[How do models currently integrate or not integrate these concepts and dynamics]
 (@Nidhi & @Krista, feel free to edit/remove any of the above text. I'm adding more text than we'll want in the end, but I want to air on the side of more rather than less so that you can make decisions about what content you think best fits the goal of this review. At some point, perhaps we should discuss this section further and I can revise based on that.) 
 
-Models representing ecosystem dynamics and vegetation demographic processes related to carbon, energy, and water fluxes operate at varying scales and have varying degrees of complexity and spatial resolution, including offline models and models that can be fully coupled with Earth System Models (ESMs). Dynamic global vegetation models (DGVMs) are the components of land surface models in ESMs used to predict the global distribution of vegetation types from physiological principles (Cao & Woodward, 1998; Foley et al., 1996; Sitch et al., 2003; Woodward & Lomas, 2004). Improved representation of vegetation demography in ESMs, specifically including forest canopy architectural variation in both horizontal and vertical directions, has repeatedly been identified as a critical step toward reduced uncertainty and more realistic representation of biologically mediated feedbacks in modeling future climates (Banerjee & Linn 2018, Evans, 2012; Moorcroft, 2006; Moorcroft, Hurtt, & Pacala, 2001; Purves & Pacala, 2008; Thomas, Brookshire, & Gerber, 2015). As models increase in complexity, however, it remains important to consider that model developments and improvements have direct tradeoffs with increasing model complexity and computational costs, and potentially decreased interpretability of model output. 
+Models representing ecosystem dynamics related to carbon, energy, and water fluxes operate at a range of scales and have varying degrees of complexity , and include offline models and models that can be fully coupled with Earth System Models (ESMs). Dynamic global vegetation models (DGVMs) comprise the land surface models in ESMs used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks (Cao & Woodward, 1998; Foley et al., 1996; Sitch et al., 2003; Woodward & Lomas, 2004). Improved representation of vegetation demographic processes in ESMs, specifically including forest canopy architectural variation in both horizontal and vertical directions, has repeatedly been identified as a critical step toward reduced uncertainty  and more accurate characterization of biologically mediated feedbacks (Banerjee & Linn 2018, Evans, 2012; Moorcroft, 2006; Moorcroft, Hurtt, & Pacala, 2001; Purves & Pacala, 2008; Thomas, Brookshire, & Gerber, 2015). Still, as models increase in complexity, model developments and improvements have direct tradeoffs with increased computational cost and potentially decreased interpretability of model output. 
 
-In general, DGVMs fall along a spectrum that ranges from Individual Based Models (IBMs) on one end of the complexity/scale spectrum to big-leaf models on the other end. Most climate models incorporate vegetation dynamics using big-leaf models. These big-leaf models include most first generation DGVMs that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer. This simplification results in greater computational efficiency and thus easier integration into ESMs (Arora & Boer, 2010; Bonan, Levis, Sitch, Vertenstein, & Oleson, 2003; Cox, 2001; Krinner et al., 2005), although it comes at a cost of a lack of representation of many important demographic processes, canopy gap formation, vertical light competition, competitive exclusion, and successional recovery from disturbance (Feeley et al., 2007; Hurtt, Moorcroft, Pacala, & Levin, 1998; Moorcroft et al., 2001; Smith, Prentice, & Sykes, 2001; Stark et al., 2012).
+In general, DGVMs range from Individual Based Models (IBMs) on one end of the complexity and scale spectrum to big-leaf models on the other end. Most climate models incorporate vegetation dynamics using big-leaf models, which include many first generation DGVMs that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer. This simplification results in greater computational efficiency and thus easier integration into ESMs (Arora & Boer, 2010; Bonan et al. 2003; Cox, 2001; Krinner et al., 2005), although it comes at a cost of a lack of representation of important demographic processes, canopy gap formation, vertical light competition, competitive exclusion, and successional recovery from disturbance (Feeley et al., 2007; Hurtt et al. 1998; Moorcroft et al., 2001; Smith et al. 2001; Stark et al., 2012). On the other end of the spectrum are IBMs, also referred to as forest gap models, representing vegetation at the level of individual plants (Christoffersen et al., 2016; Fischer et al., 2016; Fyllas et al., 2014; Sato et al. 2007; Shuman et al. 2014; Smith et al., 2001; Bugmann, 2001; Dietze & Latimer, 2011). These models are often stochastic and spatially explicit, capturing spatial variability in the light environment and microclimates at high vertical and horizontal resolution. As a result, however, IBMs are computationally expensive and tend to be run at very local scales. 
 
-On the other end of the spectrum are IBMs, also referred to as forest gap models, representing vegetation at the level of individual plants (Christoffersen et al., 2016; Fischer et al., 2016; Fyllas et al., 2014; Sato, Ito, & Kohyama, 2007; Shuman, Shugart, & Krankina, 2014; Smith et al., 2001; Bugmann, 2001; Dietze & Latimer, 2011). These models are often stochastic and spatially explicit, capturing the spatial variability in the light environment and microclimates at high vertical and horizontal resolution. As a result, however, IBMs are computationally expensive and tend to be run at very local scales. 
+Cohort-based models (CBMs) sit in the middle of this continuum, between the oversimplified vegetation dynamics in big-leaf models and the computational expense of IBMs. CBMs represent vegetation as cohorts of individual plants, grouped together based on properties including size, age, and functional type (Haverd et al., 2013; Hurtt et al., 1998; Lischke et al. 2006; Medvigy et al. 2009; Moorcroft et al., 2001; Scherstjanoi et al. 2014; Smith et al., 2014; Weng et al., 2015). Although this cohort approach serves as a compromise that incurs lower computational costs than IBMs while capturing many of the same dynamics, CBMs do not incorporate the stochastic processes of IBMs that typically allow for greater representation of functional diversity (Fisher et al., 2010). 
 
-In the middle of this spectrum are cohort-based models (CBMs), which are a compromise between the abstraction of big-leaf models and the computational expense of IBMs. Many CBMs represent vegetation as individual plants that are grouped together when they have properties (size, age, functional type) (Haverd et al., 2013; Hurtt et al., 1998; Lischke, Zimmermann, Bolliger, Rickebusch, & L€offler, 2006; Medvigy, Wofsy, Munger, Hollinger, & Moorcroft, 2009; Moorcroft et al., 2001; Scherstjanoi, Kaplan, & Lischke, 2014; Smith et al., 2014; Weng et al., 2015). The cohort approach retains the dynamics of IBMs, with reduced computational cost, but removes stochastic processes that can enhance the representation of functional diversity (Fisher et al., 2010). There is currently a lot of development of CBMs, most notably are the Ecosystem Demography model version 2 (ED2) and the Functionally Assembled Terrestrial Ecosystem Simulator (FATES), which is coupled with the Energy Exascale Earth System Model (E3SM) (Moorcroft et al. 2001, Longo et al 2019 Pt 1 & pt 2, Holm et al ?? for FATES). 
+To review the vertical light environment and thermodynamics of CBMs in more detail, we focus here on the Ecosystem Demography model version 2 (ED2), a model that is actively undergoing continued development and application across a range of ecosystems and landscapes (Moorcroft et al. 2001, Longo et al 2019 Pt 1 & pt 2). ED2 is also the progenitor of the Functionally Assembled Terrestrial Ecosystem Simulator (FATES), the DGVM coupled with the Energy Exascale Earth System Model (E3SM) (Xu & Christoffersen 2017 ) . In ED2, cohorts are tracked across multiple size-classes or individuals within the same plant functional type (PFT). Each cohort can encounter multiple light environments within a single climatic grid cell depending on patch-level disturbance history and vertical light competition that modulates interactions between plant traits and resource acquisition. Heterogeneity in the light environment and canopy structure across patches within a grid cell gives rise to varying horizontal and vertical micro-environments that differ in temperature, humidity, soil moisture, and soil nutrient conditions (Fisher et al 2018). The energy, water, and carbon dioxide cycles are solved separately for each patch in ED2, while fluxes and storage associated with individual plants are solved for each cohort within patches (Longo et al 2019). As a result, vegetation structure and functional distributions are emergent properties in the model that depend on plant functional traits and their interactions with abiotic environmental conditions. Each plant perceives a unique environment, including incident light, temperature, and vapor pressure deficit that varies across local scales in association with the horizontal and vertical position of each cohort relative to other cohorts, in addition to patch level differences in topographic and edaphic conditions. Coexistence of different vegetation types emerges from different environmental niches, either along a successional gradient of light availability or vertical position in the canopy (Moorcroft et al., 2001; Smith et al., 2001; Purves & Pacala, 2008).
 
--	Still to come: more detailed description of vertical light environment and thermodynamics in ED (and FATES?) 
+Temperature is an atmospheric boundary condition driving the ED2 model (Longo et al 2019). Each patch in each grid cell is defined by a thermodynamic envelope, comprised of distinct thermodynamic systems for each soil layer, temporary surface water or snow layer, the aboveground component of each cohort, and the canopy air space (Longo et al 2019). The  atmosphere above and outside of the canopy air space is referred to as free air and is determined directly from boundary conditions in ED2. Patches exchange heat and mass with the free air  and lose water and associated energy through surface and sub-surface runoff. The net enthalpy flux of soil, temporary surface water, and vegetation thermodynamic systems in ED2 are exclusively due to associated water fluxes, whereas the eddy flux between the free air and the canopy air space includes both water transport and flux associated with the mixing of air with different temperatures between the canopy air space and free air (Longo et al 2019).
 
-
-
--	How do models currently integrate or not integrate these concepts and dynamics
--	What does that mean for about ability to predict/understand how forest ecosystems will respond in the future?
-- E.g. see de Pury & Farquhar, 1997 : though likely an improvement over 'big-leaf' models, models that separate the canopy into sunlit and shaded portions (sun/shade models) may not be able to capture important within-canopy variation in terms of leaf dynamics (e.g. seasonal shifts in vertical leaf area distributions, Smith et al. 2019) and functions (e.g. thermal responses, as we present in this paper). Hence, multi-layered ecosystem models may be necessary for accurately projecting future forest function.
-
+Because most CBMs are spatially implicit within grid cells, direct and diffuse photosynthetically active radiation (PAR) is distributed to cohorts of differing heights using radiative transfer models that depend on designated rules associated with how crown architecture is represented, rather than via direct spatial competition determined by spatially explicit crown locations (Fisher et al. 2010?). The flat-top crown method used in ED and ED2 stacks cohort-layers vertically, and a radiative transfer model is used to determine radiation absorbed by each layer at its midpoint, meaning that each cohort is shaded by all taller cohorts. This is distinct from other models that represent crown architecture using a perfect plasticity approximation (PPA) approach, which assumes that tree crowns completely fill canopy gaps through phototropism (stem leaning) and crown filling (Strigul et al. 2008). Discrete canopy layers are comprised of self-organizing crowns that all receive the same incoming radiation. Once the canopy layer is filled with tree crowns, successive shorter trees inhabit the subsequent understory layer and are shaded by the trees in the canopy (Fisher et al 2010/2018?). Models using the PPA approach differ in number of understory layers (e.g. some only have one) (Fisher et al 2018). Though an improvement over big-leaf models, models that separate the canopy into only two layers (e.g., sunlit and shaded portions) may not be able to capture important within-canopy variation in terms of leaf dynamics (e.g., seasonal shifts in vertical leaf area distributions, Smith et al. 2019) and functions (e.g. thermal responses, as we present in this paper). Hence, multi-layered ecosystem models may be necessary for accurately projecting future forest function. (E.g. see de Pury & Farquhar, 1997)
 
 
 *Knowledge Gaps & Future Research*
+-	What do [current model abilities or inabilities to integrate these concepts] mean for about ability to predict/understand how forest ecosystems will respond in the future?
 -	What major gaps in knowledge and/or important questions emerge from this review (i.e. a lot of focus on droughts justifiably, but understanding heterogeneous impacts of temperature increases on forest ecosystems, particularly at vertically resolved scales is also important.)
 - Not sure where this section should go
 
