--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1072,6 +1072,24 @@
   number = {G1}
 }
 
+@article{duffyHowCloseAre2021,
+  title = {How Close Are We to the Temperature Tipping Point of the Terrestrial Biosphere?},
+  author = {Duffy, Katharyn A. and Schwalm, Christopher R. and Arcus, Vickery L. and Koch, George W. and Liang, Liyin L. and Schipper, Louis A.},
+  date = {2021-01-01},
+  journaltitle = {Science Advances},
+  volume = {7},
+  pages = {eaay1052},
+  publisher = {{American Association for the Advancement of Science}},
+  issn = {2375-2548},
+  doi = {10.1126/sciadv.aay1052},
+  url = {https://advances.sciencemag.org/content/7/3/eaay1052},
+  urldate = {2021-01-19},
+  abstract = {The temperature dependence of global photosynthesis and respiration determine land carbon sink strength. While the land sink currently mitigates \textasciitilde 30\% of anthropogenic carbon emissions, it is unclear whether this ecosystem service will persist and, more specifically, what hard temperature limits, if any, regulate carbon uptake. Here, we use the largest continuous carbon flux monitoring network to construct the first observationally derived temperature response curves for global land carbon uptake. We show that the mean temperature of the warmest quarter (3-month period) passed the thermal maximum for photosynthesis during the past decade. At higher temperatures, respiration rates continue to rise in contrast to sharply declining rates of photosynthesis. Under business-as-usual emissions, this divergence elicits a near halving of the land sink strength by as early as 2040. Future anticipated warming could reduce the terrestrial carbon sink by \textasciitilde 50\% by mid-century. Future anticipated warming could reduce the terrestrial carbon sink by \textasciitilde 50\% by mid-century.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\KAG9IUG6\\Duffy et al. - 2021 - How close are we to the temperature tipping point .pdf;C\:\\Users\\Me\\Zotero\\storage\\WN8NC8FI\\eaay1052.html},
+  langid = {english},
+  number = {3}
+}
+
 @article{duqueThermophilizationAdultJuvenile2015a,
   title = {Thermophilization of Adult and Juvenile Tree Communities in the Northern Tropical {{Andes}}},
   author = {Duque, Alvaro and Stevenson, Pablo R. and Feeley, Kenneth J.},
